--- a/src/App.css
+++ b/src/App.css
@@ -69,9 +69,18 @@
   flex-wrap: wrap;
   justify-content: space-between;
   margin: 20px;
-  padding: 10px;
-  background-color: black;
 
+}
+
+.container {
+  background-color: #f0f2f5;
+  border-radius: 20px;
+  display: flex;
+
+  justify-content: space-between;
+  align-items: center;
+  margin: 20px;
+  box-shadow: 2px 2px 10px 0 rgba(0, 0, 0, 0.1);
 }
 
 .ant-drawer-body {
