Change border radius

--- a/src/App.css
+++ b/src/App.css
@@ -103,6 +103,14 @@ body {
   overflow-x: hidden;
 }
 
+.row {
+  border-radius: 20px;
+
+}
+
+img {
+  border-radius: 20px;
+}
 
 
 .container-login {
